--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Statistics</title>
-    <link type="text/css" rel="stylesheet" href="css/lightgallery.css" /> 
+    <link type="text/css" rel="stylesheet" href="css/lightgallery.min.css" /> 
 </head>
 <body>
   <div id="aniimated-thumbnials">
