add website for stats

--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <html>
   <head>
     <title>Statistics</title>
-    <link type="text/css" rel="stylesheet" href="css/lightgallery.min.css" /> 
+    <link type="text/css" rel="stylesheet" href="./css/lightgallery.min.css" /> 
 </head>
 <body>
   <div id="aniimated-thumbnials">
-  <a href="stats/plots/id_vs_reward-1.png">
-    <img src="stats/plots/id_vs_reward-1.png" />
+  <a href="./stats/plots/id_vs_reward-1.png">
+    <img src="./stats/plots/id_vs_reward-1.png" />
   </a>
-  <a href="stats/plots/win-loss_streak_throw-1.png">
-    <img src="stats/plots/win-loss_streak_throw-1.png" />
+  <a href="./stats/plots/win-loss_streak_throw-1.png">
+    <img src="./stats/plots/win-loss_streak_throw-1.png" />
   </a>
-    <a href="stats/plots/id_vs_reward-2.png">
-    <img src="stats/plots/id_vs_reward-2.png" />
+    <a href="./stats/plots/id_vs_reward-2.png">
+    <img src="./stats/plots/id_vs_reward-2.png" />
   </a>
-  <a href="stats/plots/win-loss_streak_throw-2.png">
-    <img src="stats/plots/win-loss_streak_throw-2.png" />
+  <a href="./stats/plots/win-loss_streak_throw-2.png">
+    <img src="./stats/plots/win-loss_streak_throw-2.png" />
   </a>
-    <a href="stats/plots/id_vs_reward-3.png">
-    <img src="stats/plots/id_vs_reward-3.png" />
+    <a href="./stats/plots/id_vs_reward-3.png">
+    <img src="./stats/plots/id_vs_reward-3.png" />
   </a>
-  <a href="stats/plots/win-loss_streak_throw-3.png">
-    <img src="stats/plots/win-loss_streak_throw-3.png" />
+  <a href="./stats/plots/win-loss_streak_throw-3.png">
+    <img src="./stats/plots/win-loss_streak_throw-3.png" />
   </a>
-    <a href="stats/plots/id_vs_reward-4.png">
-    <img src="stats/plots/id_vs_reward-4.png" />
+    <a href="./stats/plots/id_vs_reward-4.png">
+    <img src="./stats/plots/id_vs_reward-4.png" />
   </a>
-  <a href="stats/plots/win-loss_streak_throw-4.png">
-    <img src="stats/plots/win-loss_streak_throw-4.png" />
+  <a href="./stats/plots/win-loss_streak_throw-4.png">
+    <img src="./stats/plots/win-loss_streak_throw-4.png" />
   </a>
 </div>
-<script src="js/lightgallery.min.js"></script>
-<script src="js/lg-thumbnail.min.js"></script>
-<script src="js/lg-fullscreen.min.js"></script>
+<script src="./js/lightgallery.min.js"></script>
+<script src="./js/lg-thumbnail.min.js"></script>
+<script src="./js/lg-fullscreen.min.js"></script>
 <script>
 lightGallery(document.getElementById('aniimated-thumbnials'), {
     thumbnail:true
